--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,14 @@
         "data:import": "node seeder.js"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "mongoose": "^8.2.4",
-        "bcryptjs": "^2.4.3",
         "jsonwebtoken": "^9.0.2",
-        "colors": "^1.4.0"
+        "mongoose": "^8.2.4",
+        "multer": "^2.0.2"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
