--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,20 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
+        "compression": "^1.8.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-async-handler": "^1.2.0",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
+        "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.4",
-        "multer": "^2.0.2"
+        "morgan": "^1.10.1",
+        "multer": "^2.0.2",
+        "xss-clean": "^0.1.4"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
