--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "dompurify": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
