--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.41.3",
         "colors": "^1.4.0",
         "compression": "^1.8.1",
         "cors": "^2.8.5",
@@ -24,6 +25,8 @@
         "mongoose": "^8.2.4",
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
+        "multer-storage-cloudinary": "^4.0.0",
+        "node-cron": "^4.2.1",
         "xss-clean": "^0.1.4"
     },
     "devDependencies": {
