--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "axios": "^1.13.5",
     "dompurify": "^3.3.1",
+    "i18next": "^25.8.5",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^16.5.4",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "redis": "^5.10.0",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
