--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
         "multer": "^2.0.2",
         "multer-storage-cloudinary": "^4.0.0",
         "node-cron": "^4.2.1",
+        "redis": "^5.10.0",
+        "rss": "^1.2.2",
         "xss-clean": "^0.1.4"
     },
     "devDependencies": {
