--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "axios": "^1.13.5",
     "dompurify": "^3.3.1",
     "i18next": "^25.8.5",
@@ -21,7 +23,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.13.0",
     "redis": "^5.10.0",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
